@@ -3,3 +3,5 @@ E: 33:fonctionNew2: Raising a new style class which doesn't inherit from BaseExc
 E: 37:fonctionNotImplemented: NotImplemented raised - should raise NotImplementedError
 W: 21:fonctionBof: Exception doesn't inherit from standard "Exception" class
 W: 29:fonctionBof2: Exception doesn't inherit from standard "Exception" class
+W: 29:fonctionBof2: Use raise ErrorClass(args) instead of raise ErrorClass, args.
+W: 37:fonctionNotImplemented: Use raise ErrorClass(args) instead of raise ErrorClass, args.
