@@ -1,3 +1,3 @@
 W:  8:function1: Raising a string exception
 W: 12:function2: Raising a string exception
-
+W: 12:function2: Use raise ErrorClass(args) instead of raise ErrorClass, args.
